# test

./: README.md  new.txt
optimask/: .gitignore
optimask/dev/参考资料/GDSII/boolean_7_1/boolean/: CMakeLists.txt  install.html
optimask/dev/参考资料/GDSII/boolean_7_1/boolean/apps/: CMakeLists.txt
optimask/dev/参考资料/GDSII/boolean_7_1/boolean/apps/edit/: CMakeLists.txt
optimask/dev/参考资料/GDSII/boolean_7_1/boolean/apps/edit/bool_xml/commands/: BLA.html  commandindex.xsl  commands.html  commands.xml  commands.xsl  commands2.xsl  commandtot.xsl  gencom.pl  index.html  mainindex.html  toc.html
optimask/dev/参考资料/GDSII/boolean_7_1/boolean/apps/edit/bool_xml/docbook/: ChangeLog  VERSION  WhatsNew
optimask/dev/参考资料/GDSII/boolean_7_1/boolean/apps/edit/boolean_html/: automenu.html  bnf.html  bnfframe.html  commands.html  commandscontents.html  commandsframe.html  default.htm  filemenu.html  groumenu.html  helpmenu.html  index.html  mainindex.html  mousemenu.html  opermenu.html  prefmenu.html  prog.html  toolsmenu.html  topcontents.html  viewmenu.html
optimask/dev/参考资料/GDSII/boolean_7_1/boolean/apps/edit/boolean_html/bnf/: example.html  example.key  example3.html  example3.key  gdsformat.html  keyformat.html
optimask/dev/参考资料/GDSII/boolean_7_1/boolean/apps/edit/default/config/: boolean.ad  default.set  gdsapp.cfg  gdsapp.dos  history.set
optimask/dev/参考资料/GDSII/boolean_7_1/boolean/apps/edit/default/data/: 33375151.cal  aaaaa.key  aaaaaimage.key  aaaaap.cal  aap.cal  albert.cal  amsterdam.cal  bbbb.key  bbbb2.key  bignext.cal  bigtest2.cal  bigtest2l.key  bigthree.cal  bigthree.key  boog.key  boog2.key  boog3.key  charac.key  cir1.key  cir2.key  circ.key  circ3.key  circir.key  circlerr.cal  d1110118.cal  d3248239.cal  d3337509.cal  dipool.cal  drieh.key  example.cal  example4.key  faust.cal  faust1.key  faust2.key  fracdrie.key  fractal3.cal  goed.cal  hoodvir.cal  karlong.cal  kat.key  (+24 more)
optimask/dev/参考资料/GDSII/boolean_7_1/boolean/apps/edit/default/process/: aap2.prs  aap3.prs  ask.prs  autom.prs  blabla.prs  cnc.prs  copy.prs  corr1.prs  drie.prs  faut.prs  frac.prs  invert01c.prs  klaas.prs  mrect.prs  onerec.prs  ring1.prs  test.prs  testc.gds  testc.prs  tworec.prs  tworec2.prs  vijf.prs  wil1.prs
optimask/dev/参考资料/GDSII/boolean_7_1/boolean/apps/edit/gdsuser/config/: gdsapp.cfg  history.set  user.set
optimask/dev/参考资料/GDSII/boolean_7_1/boolean/apps/edit/gdsuser/process/: 010221.cal  010221.prs  aap.prs  aap3.prs  autom.prs  bug.prs  buginvert.prs  cleancircle.prs  cor.prs  corcond.prs  corm.prs  del.prs  exor.prs  flat.prs  invert3.prs  martijn.prs  mercor.prs  merge.prs  merge2.prs  mic.prs  pause.prs  ram.prs  ring.prs  robert.prs  test7.prs
optimask/dev/参考资料/GDSII/boolean_7_1/boolean/apps/edit/include/: MemLeak.h  about.h  alias.h  arc.h  b_statusb.h  bbox.h  boundary.h  chandbas.h  circleditdlg.h  cnchier.h  command.h  copylist.h  cparser.h  cursordlg.h  dcclbuf.h  ddehand.h  debugdlg.h  distdlg.h  doubledc.h  drivout.h  element.h  elemlst.h  emaskin.h  emaskout.h  eventids.h  execdlg.h  exlout.h  facdlg.h  flashin.h  flashout.h  gbrhier.h  gdsapp.h  gdsdef.h  gdsdrin.h  gdsdrout.h  gdserr.h  gdsii.h  gdsio.h  gdsmes.h  genhier.h  (+52 more)
optimask/dev/参考资料/GDSII/boolean_7_1/boolean/apps/edit/include/gtk/: dcclbuf.h
optimask/dev/参考资料/GDSII/boolean_7_1/boolean/apps/edit/include/list/: b_dl_itr.cpp  b_dl_itr.h  b_lnk_itr.cpp  b_lnk_itr.h  instance.cpp  instonly.cpp  insttext.cpp
optimask/dev/参考资料/GDSII/boolean_7_1/boolean/apps/edit/include/msw/: dcclbuf.h
optimask/dev/参考资料/GDSII/boolean_7_1/boolean/apps/edit/source_html/sgml/: None  class_AET_elem.sgml  class_About.sgml  class_Alias.sgml  class_AliasList.sgml  class_Arc_Seg.sgml  class_Arcseg.sgml  class_Array.sgml  class_ArrayReference.sgml  class_BaseTool.sgml  class_Bgnlib.sgml  class_Bgnstr.sgml  class_Boundary.sgml  class_BoundingBox.sgml  class_Box.sgml  class_BoxTool.sgml  class_Buffer.sgml  class_CNC_driver_out.sgml  class_CR_point.sgml  class_Circle.sgml  class_CircleTool.sgml  class_ColumnsRows.sgml  class_Command.sgml  class_CommandHandler.sgml  class_CommandParser.sgml  class_CopyTool.sgml  class_DDEHandler.sgml  class_DL_Iter.sgml  class_DL_List.sgml  class_DL_Node.sgml  class_DL_SortIter.sgml  class_DL_StackIter.sgml  class_DeSelectTool.sgml  class_Debug_driver.sgml  class_DeleteTool.sgml  class_DistanceDlg.sgml  class_DrawDriver.sgml  class_DrawDriver__2.sgml  class_Driver_out.sgml  class_EXL_driver_out.sgml  (+354 more)
optimask/dev/参考资料/GDSII/boolean_7_1/boolean/apps/edit/src/: booldoc.cfg  boolheader.html  vervang
optimask/dev/参考资料/GDSII/boolean_7_1/boolean/apps/edit/win32/: boolean.rc
optimask/dev/参考资料/GDSII/boolean_7_1/boolean/docs/: boolean.doxy  footer.html
optimask/dev/参考资料/GDSII/boolean_7_1/boolean/docs/html/: about_8h-source.html  alias_8h-source.html  annotated.html  arc_8h-source.html  bbox_8h-source.html  boundary_8h-source.html  chandbas_8h-source.html  circleditdlg_8h-source.html  classArc__Seg-members.html  classArc__Seg.html  classArcseg-members.html  classArcseg.html  classArrayReference-members.html  classArrayReference.html  classBaseTool-members.html  classBaseTool.html  classBoundary-members.html  classBoundary.html  classBox-members.html  classBox.html  classBoxTool-members.html  classBoxTool.html  classCanvas-members.html  classCanvas.html  classCircle-members.html  classCircle.html  classCircleTool-members.html  classCircleTool.html  classCircleditDialog-members.html  classCircleditDialog.html  classCommand-members.html  classCommand.html  classCommandHandler-members.html  classCommandHandler.html  classCommandParser-members.html  classCommandParser.html  classCopyTool-members.html  classCopyTool.html  classCopywxListBox-members.html  classCopywxListBox.html  (+247 more)
optimask/dev/参考资料/GDSII/boolean_7_1/boolean/modules/: CMakeLists.txt
optimask/dev/参考资料/GDSII/boolean_7_1/boolean/modules/kbool/: CMakeLists.txt
optimask/dev/参考资料/GDSII/boolean_7_1/boolean/modules/kbool/CVS/: Entries  Repository
optimask/dev/参考资料/GDSII/boolean_7_1/boolean/tools/: convert  convertall  omzet-d2u  omzet-u2d  splitpoly
(+1030 files in other folders)
