PROJECT( kbool )

IF( NOT DEFINED WXART2D_COMP_SAMP_BOOLEAN )
	SET(  WXART2D_COMP_SAMP_BOOLEAN 1 )
ENDIF( NOT DEFINED WXART2D_COMP_SAMP_BOOLEAN )

IF( NOT DEFINED WXART2D_USE_KBOOL )
	cmake_minimum_required(VERSION 2.6)
	SET (LIBRARY_OUTPUT_PATH ${kbool_BINARY_DIR}/lib/ CACHE PATH "Single output directory for building all libraries.")
	SET (EXECUTABLE_OUTPUT_PATH ${kbool_BINARY_DIR}/bin/ CACHE PATH "Single output directory for building all executables.")
	
	MARK_AS_ADVANCED(LIBRARY_OUTPUT_PATH EXECUTABLE_OUTPUT_PATH)
	
	OPTION( KBOOL_MAKE_SHARED "Make shared versions (.so) of Kbool libraries" OFF )
	
	INCLUDE_DIRECTORIES( ${kbool_SOURCE_DIR}/include )
ENDIF( NOT DEFINED WXART2D_USE_KBOOL )

IF( KBOOL_MAKE_SHARED )
    ADD_DEFINITIONS ( -DA2DKBOOLMAKINGDLL )
    SET(BUILD_SHARED_LIBS = 1)
ENDIF( KBOOL_MAKE_SHARED )
        
IF( WXART2D_COMP_SAMP_BOOLEAN )
	ADD_SUBDIRECTORY( src )
	ADD_SUBDIRECTORY( samples )
ELSE( WXART2D_COMP_SAMP_BOOLEAN )
	ADD_SUBDIRECTORY(  src )
ENDIF( WXART2D_COMP_SAMP_BOOLEAN )
    
